[package]
name = "ldap_recon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
ansi_term = "0.12"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
clap = { version = "3.1.6", features = ["derive"] }
chrono = "0.4"
itertools = "0.8"

[dependencies.ldap3]
version = "0.10.2"